--- a/app/views/locations/_cities_handlebar.html.erb
+++ b/app/views/locations/_cities_handlebar.html.erb
@@ -5,7 +5,7 @@
       <select id="cities" name="city" class="form-control" >
         <option value="0">Select City</option>
         {{#each cities}}
-          <option value="{{id}}" label="{{value}}">{{this}} </option>
+          <option value="{{id}}" label="{{value}}">{{value}} </option>
         {{/each}}
       </select>
     </div>
