--- a/app/views/locations/_states_handlebar.html.erb
+++ b/app/views/locations/_states_handlebar.html.erb
@@ -1,11 +1,11 @@
 <script id="states-template" type="text/x-handlebars-template">
-  <div id="content">
+  <div id="content" >
     <!-- states list -->
     <div id="stateDiv">
       <select id="states" name="state" class="form-control"  onchange="CampusConnect.Locations.getCities(this.value)">
         <option value="0">Select State</option>
         {{#each states}}
-          <option value="{{id}}" label="{{value}}">{{this}} </option>
+          <option value="{{id}}" label="{{value}}">{{value}} </option>
         {{/each}}
       </select>
     </div>
