--- a/public/stylesheets/paperkit/assets/css/examples.css
+++ b/public/stylesheets/paperkit/assets/css/examples.css
@@ -98,7 +98,7 @@
   background-color: #FF8F5E;
   border-radius: 8px;
   color: #fff;
-  max-width: 350px;
+  max-width: 75%;
   margin: 20px 0 70px;
   min-height: 400px;
   padding: 30px;
