college registation changes

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -8,6 +8,7 @@
         <%=stylesheet_link_tag "paperkit/assets/css/ct-paper.css"%>
         <%=stylesheet_link_tag "paperkit/assets/css/demo.css"%>
         <%=stylesheet_link_tag "paperkit/assets/css/examples.css"%>
+        <%=stylesheet_link_tag "college_registeration.css" %>
         <%=stylesheet_link_tag "application.css"%>
         <%= csrf_meta_tags %>
     </head>
