--- a/app/views/dashboard/_right_nav.html.erb
+++ b/app/views/dashboard/_right_nav.html.erb
@@ -1,6 +1,17 @@
-<li>
-    <a href="#" class="btn btn-simple"><%=current_user.firstname%></a>
-</li>
-<li>
-    <a href="#" class="btn btn-simple" onclick="CampusConnect.Utilities.signOut('<%=form_authenticity_token%>')">Sign Out</a>
-</li>
+<div class="ui fixed menu">
+  <div class="ui container">
+    <div class="left menu">
+      <a class="launch icon item" onclick="$('.ui.sidebar').sidebar('setting', 'transition', 'overlay').sidebar('toggle');">
+        <i class="content icon"></i>
+      </a>
+      <a href="#" class="header item">
+        <h3>CampusConnect</h3>
+      </a>
+    </div>
+    <div class="right menu">
+		<a href="#" class="item"><%=current_user.firstname%></a>
+		<a href="#" class="item" onclick="CampusConnect.Utilities.signOut('<%=form_authenticity_token%>')">Sign Out</a>
+    </div>
+  </div>
+</div>
+
