--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -2,20 +2,17 @@
 <html>
     <head>
         <title>College Connect</title>
-        <%=stylesheet_link_tag "bootstrap/dist/css/bootstrap.min.css"%>
-        <%=stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"%>
         <%=stylesheet_link_tag "dashboard.css"%>
         <%=stylesheet_link_tag "application.css"%>
         <%= csrf_meta_tags %>
     </head>
 
     <body>
-        <%=javascript_include_tag "jquery/dist/jquery.min.js"%>
-        <%=javascript_include_tag "/stylesheets/bootstrap/dist/js/bootstrap.min.js"%>
-        
         <%= javascript_include_tag 'handlebars-v4.0.5.js' %>
+        <%= javascript_include_tag 'campus_connect/utilities.js' %>
+        <%= javascript_include_tag 'application.js' %>
+        <%= render 'layouts/header' %>
         
-
         <%=yield%>
     </body>
 </html>
