--- a/app/views/campus_drives/_right_nav.html.erb
+++ b/app/views/campus_drives/_right_nav.html.erb
@@ -1,3 +1,4 @@
+
 <div class="ui fixed menu">
   <div class="ui container">
     <div class="left menu">
@@ -14,11 +15,12 @@
         <label href="#" class="item"><%=current_user.firstname%></label>
         <i class="dropdown icon"></i>
         <div class="menu">
-          <div class="item" style="margin-left:10px">Profile</div>
-          <div class="item" style="margin-left:10px" >Settings</div>
-          <div class="item" style="margin-left:10px" >Help</div>
-          <div class="item" style="margin-left:10px">
+          <div class="item">Profile <i class="user icon" style="float:right"></i></div>
+          <div class="item">Settings <i class="settings icon" style="float:right"></i></div>
+          <div class="item" >Help <i class="help icon" style="float:right"></i></div>
+          <div class="item">
             <a href="#" onclick="CampusConnect.Utilities.signOut('<%=form_authenticity_token%>')">Sign Out</a>
+            <i class="sign out icon" style="float:right"></i>
           </div>
         </div>
       </div>
