--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,68 +1,62 @@
-    <div class="ui vertical inverted sidebar menu left overlay">
-      <div class="profile_pic">
-        <img src="/images/Thapar_Uni_logo.jpg" class="img-circle profile_img">  
-        <span style="color:#fff">Thapar University</span>
-      </div>
-      <h4 class="ui horizontal divider header inverted">
-        <i class="tag icon left"></i>
-        Navigation
-      </h4>
-
-      <a class="item">
-        <i class="home icon"></i>
-        Home
-      </a>
-      <a class="item">
-        <i class="block layout icon"></i>
-        Topics
-      </a>
-      <a class="item">
-        <i class="smile icon"></i>
-        Friends
-      </a>
-      <a class="item">
-        <i class="calendar icon"></i>
-        History
-      </a>
+<div class="ui vertical inverted sidebar menu left overlay">
+  <div class="profile_pic">
+    <img src="/images/Thapar_Uni_logo.jpg" class="img-circle profile_img">
+    <span style="color:#fff">Thapar University</span>
+  </div>
+  <h4 class="ui horizontal divider header inverted">
+  <i class="tag icon left"></i>
+  Navigation
+  </h4>
+  <a class="item">
+    <i class="home icon"></i>
+    Home
+  </a>
+  <a class="item">
+    <i class="block layout icon"></i>
+    Topics
+  </a>
+  <a class="item">
+    <i class="smile icon"></i>
+    Friends
+  </a>
+  <a class="item">
+    <i class="calendar icon"></i>
+    History
+  </a>
+</div>
+<div class="main-content container">
+  <div class="ui search" style="margin-bottom:25px;margin-left:65%;">
+    <div class="ui icon input">
+      <input class="prompt" type="text" placeholder="Search here..." style="width:265px">
+      <i class="search icon"></i>
     </div>
-
-    <div class="main-content container">
-
-      <div class="ui search" style="margin-bottom:25px;margin-left:70%">
-        <div class="ui icon input">
-          <input class="prompt" type="text" placeholder="Search here...">
-          <i class="search icon"></i>
-        </div>
-        <div class="results"></div>
-      </div>
-
-      <div class="pusher">
-        <div class="ui cards">
-          <div class="card">
-            <div class="middle aligned content">
-              <img class="left floated small ui image" src="/images/logo.png">
-              <div class="header">
-                Pramata knowledge solution pvt ltd.
-              </div>
-              <div class="meta">
-                Bangalore
-              </div>
-              <div class="other details">
-               some other information can come here as well  
-               some other information can come here as well  
-               some other information can come here as well  
-               some other information can come here as well  
-             </div>
+    <div class="results"></div>
+  </div>
+  <div class="pusher">
+    <div class="ui cards">
+      <div class="card">
+        <div class="middle aligned content">
+          <img class="left floated small ui image" src="/images/pramata.png" style="margin-bottom:0px;border: 1px solid rgba(52,73,94,.44);padding: 4px;max-height:120px">
+          <div class="header">
+            Pramata knowledge solution pvt ltd.
+          </div>
+          <div class="meta">
+            Bangalore
+          </div>
+          <div class="other details">
+            <p>It's B2B product based company, Headquarter in US California</p>
+            <p>It is in action/started in 1999 and has well funded by silicon valley partners</p>
+            <p>It has offices in Bangalore and Mumbai </p>
+          </div>
         </div>
         <div class="extra content">
-         <a>
-          <i class="users icon"></i>
-          2 Members
-        </a>
-        <div class="ui right floated button">
-          Action
-        </div>
-
+          <a>
+            <i class="users icon"></i>
+            200+ Members
+          </a>
+          <div class="ui right floated button">
+            Action
+          </div>
         </div>
       </div>
       
@@ -76,24 +70,22 @@
             Bangalore
           </div>
           <div class="other details">
-           some other information can come here as well  
-           some other information can come here as well  
-           some other information can come here as well  
-           some other information can come here as well  
-         </div>
+            <p>It's B2B product based company, Headquarter in US California</p>
+            <p>It is in action/started in 1999 and has well funded by silicon valley partners</p>
+            <p>It has offices in Bangalore and Mumbai </p>
+          </div>
           <!-- <div class="description">
             description about the company goes here, and other necessary detail can also be added here
           </div> -->
         </div>
         <div class="extra content">
-         <a>
-          <i class="users icon"></i>
-          2 Members
-        </a>
-        <div class="ui right floated button">
-          Action
-        </div>
-
+          <a>
+            <i class="users icon"></i>
+            2 Members
+          </a>
+          <div class="ui right floated button">
+            Action
+          </div>
           <!-- <div class="ui two buttons">
             <div class="ui basic green button">Approve</div>
             <div class="ui basic red button">Decline</div>
@@ -101,27 +93,27 @@
         </div>
       </div>
       
-        </div>
-      </div>  
     </div>
-  
-  <script>
-    var content = [
-    {
-      title: 'Horse',
-      description: 'An Animal'
-    },
-    {
-      title: 'Cow',
-      description: 'Another Animal'
-    } ];
+  </div>
+</div>
 
-    $('.ui.search').search({
-      source : content,
-      searchFields: [
-      'title'
-      ],
-      searchFullText: false
-    });
+<script>
+// $('.ui.dropdown').dropdown();
 
-  </script>
+var content = [
+{
+title: 'Horse',
+description: 'An Animal'
+},
+{
+title: 'Cow',
+description: 'Another Animal'
+} ];
+$('.ui.search').search({
+source : content,
+searchFields: [
+'title'
+],
+searchFullText: false
+});
+</script>
