--- a/app/views/campus_drives/index.html.erb
+++ b/app/views/campus_drives/index.html.erb
@@ -55,7 +55,7 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="marker icon"></i>
-            <%= text_field_tag "address_line1",nil,placeholder: "Enter Address"%>
+            <%= text_field_tag "address_line_1",nil,placeholder: "Enter Address"%>
           </div>
         </div>
         <div class="field">
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-       <div class="ui horizontal divider">
+        <div class="ui horizontal divider">
           <p>Coordinators specific for this Drive</p>
         </div>
         <div class="field">
@@ -118,23 +118,30 @@
             <div class="field">
               <div class="ui left icon input">
                 <i class="volume control phone icon"></i>
-                <%= text_field_tag "phone1",nil,placeholder: "Enter phone # 1" %>
+                <%= text_field_tag "phone_1",nil,placeholder: "Enter phone # 1" %>
               </div>
             </div>
             <div class="field">
               <div class="ui left icon input">
                 <i class="volume control phone icon"></i>
-                <%= text_field_tag "phone2",nil,placeholder: "Enter phone # 2"%>
+                <%= text_field_tag "phone_2",nil,placeholder: "Enter phone # 2"%>
               </div>
             </div>
           </div>
         </div>
-        
-        <button class="ui fluid large teal submit button">
-        Submit</button>
-        
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="comment icon"></i>
+            <%= text_field_tag "description",nil, placeholder: "Any comment specify here"%>
+          </div>
+        </div>
+        <button class="ui fluid large teal submit button">Submit</button>
+        <div class="ui error message"></div>
       </div>
       <%end %>
     </div>
   </div>
 </div>
+<script type="text/javascript">
+CampusConnect.College.Validation.campusDrive();
+</script>
