--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -11,6 +11,8 @@
         <%= javascript_include_tag 'handlebars-v4.0.5.js' %>
         <%= javascript_include_tag 'campus_connect/utilities.js' %>
         <%= javascript_include_tag 'application.js' %>
+        <%= javascript_include_tag "campus_connect/college/validation.js" %>
+
         <%= render 'layouts/header' %>
         
         <%=yield%>
