password confirmation field name changed in user reg

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -46,7 +46,7 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="lock icon"></i>
-            <%= f.password_field :confirm_pass, autocomplete: "off",placeholder: "Enter password here" %>
+            <%= f.password_field :password_confirmation, autocomplete: "off",placeholder: "Enter password here" %>
           </div>
         </div>
 
