--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -10,13 +10,16 @@
     <body>
         <%= javascript_include_tag 'handlebars-v4.0.5.js' %>
         <%= javascript_include_tag 'campus_connect/utilities.js' %>
+        <%= javascript_include_tag 'campus_connect/dashboard.js' %>
         <%= javascript_include_tag 'application.js' %>
         <%= javascript_include_tag "campus_connect/college/validation.js" %>
 
         <%= render 'layouts/header' %>
         <%= render :partial=>"campus_drives/departments_handlebar" %>
+        <%= render :partial=>"dashboard/cards_handlebar" %>
         <script type="text/javascript">
             CampusConnect.Utilities.init();
+            CampusConnect.Dashboard.init();
         </script>
         
         <%=yield%>
