--- a/app/views/dashboard/_cards_handlebar.html.erb
+++ b/app/views/dashboard/_cards_handlebar.html.erb
@@ -12,7 +12,9 @@
     <div class="middle aligned content">
       <img class="left floated small ui image" src="/images/pramata.png" style="margin-bottom:0px;border: 1px solid rgba(52,73,94,.44);padding: 4px;max-height:120px">
       <div class="right floated">
-        hello world
+        <br/><br/>
+        <strong>Offering/Package:</strong><br/><br/>
+        {{opening.package_lower}} - {{opening.package_upper}}
       </div>
       <div class="header">
         {{company.name}}        
