adding modal to filter

--- a/app/views/dashboard/_filters.html.erb
+++ b/app/views/dashboard/_filters.html.erb
@@ -1,6 +1,6 @@
 <style>
 .verticalLine {
-  border-right:1px solid #ebebe0;
+border-right:1px solid #ebebe0;
 }
 </style>
 <div class="filters" style="padding-top:1%;padding-left:45%;">
@@ -25,8 +25,22 @@
 				<label>Delhi</label>
 			</div>
 		</div>
+		<div class="item">
+			<div class="ui checkbox">
+				<input type="checkbox" name="example">
+				<label>Mumbai</label>
+			</div>
+		</div>
+		<div class="item">
+			<div class="ui checkbox">
+				<input type="checkbox" name="example">
+				<label>Chennai</label>
+			</div>
+		</div>
+		<div class="item">
+			<a class="more-location">More..</a>
+		</div>
 	</div>
-
 	<div class="ui divider"></div>
 	<h3>Department/Position </h3>
 	<div class="ui list">
@@ -48,5 +62,12 @@
 				<label>Human Resource</label>
 			</div>
 		</div>
+		<div class="item">
+			<a>More..</a>
+		</div>
 	</div>
+</div>
+
+<div id="location-filter-container">
+	
 </div>
