--- a/app/views/dashboard/_location_filter_handlebar.html.erb
+++ b/app/views/dashboard/_location_filter_handlebar.html.erb
@@ -2,19 +2,35 @@
 <div class="ui modal">
 	<i class="close icon"></i>
 	<div class="header">
-		Modal Title
+		<div class="ui small horizontal list">
+			{{#each alphabets}}
+			<div class="item">
+		      <a class="header" href="#{{this}}">{{this}}</a>
+		    </div>			
+		    {{/each}}	
+		</div>
 	</div>
-	<div class="image content">
-		<div class="image">
-			An image can appear on left or an icon
+	<div class="content" style="">
+		{{#each cities}}
+		<div class="ui list" >
+			<div class="item" id="{{@key}}">
+				{{@key}}
+				<div class="list" >
+					{{#each this}}
+						<div class="item">
+							<input type="checkbox" name="{{this}}">
+							{{this}}
+							</input>
+						</div>
+					{{/each}}
+				</div>
+			</div>
 		</div>
-		<div class="description">
-			A description can appear on the right
-		</div>
+		{{/each}}		
 	</div>
 	<div class="actions">
-		<div class="ui button">Cancel</div>
-		<div class="ui button">OK</div>
+				<div class="ui button">Cancel</div>
+				<div class="ui button">OK</div>
 	</div>
 </div>
 </script>
