--- a/app/views/dashboard/company_details.html.erb
+++ b/app/views/dashboard/company_details.html.erb
@@ -1,25 +1,42 @@
 <style type="text/css">
-#employer-profile .image-block {
-    /*margin-bottom: 20px;*/
-    margin-top: 28px;
-    background-color: #4c5365;
-    padding: 44px 0 48px;
-    color: #fff;
-    font-size: 14px;
+ul.ui.horizontal.bulleted.list li::before, .ui.horizontal.bulleted.list > .item::before{
+color: white !important;
 }
 </style>
-
-<div id="employer-profile">
-    <div class="profile-block image-block">
-        <div class="ui doubling stackable grid three column container">
-            <div class="one wide column"></div>
-            <div id="profile-image" class="three wide column">
-                <img src="/images/pramata.png" style="padding: 4px;max-height:160px">
+<div class="ui grid" style="position:relative;background:cadetblue">
+    <div class="sixteen wide column" style="height:60px"></div>
+    
+    <div class="one wide column"></div>
+    <div class="two wide column">
+        <img src="/images/companies/delhivery_logo.png" style="padding: 4px;max-height:120px">
+    </div>
+    <div class="thirteen wide column">
+        <h1 style="color:white">Delhivery Corp pvt ltd</h1>
+        <h2 style="color:white;line-height:0px;font-size:17px;">Enabling Commerce</h2>
+        <div class="ui horizontal bulleted list" style="color:white;margin-top:10px;">
+            <p class="item">
+                Founded in: 2012
+            </p>
+            <p class="item">
+                Employees: 32100
+            </p>
+            <p class="item">
+                HeadQuater: Delhi
+            </p>
+        </div>
+    </div>
+    <!-- new row -->
+</div>
+<div class="ui grid">
+    <div class="row" style="background:orange">        
+        <div class="one wide column">
+            <div class="ui vertical divider" style="position:relative"> or
             </div>
-            <div class="eight wide column">
-                <h2>Pramata knowledge solution</h2>
-                <p>Founded in 2005</p>
-                <p>200+ employees. Bangalore.</p>
+        </div>
+        <div class="three wide column">
+            Location: Delhi
+            <div class="ui vertical divider" style="position:relative">
+                Or
             </div>
         </div>
     </div>
